List, ArrayList, LinkedList & Vector - Declaration & operations